# mana-symbols

./: Cargo.toml  README.md
snapshots/: mana__c.snap
src/: color.rs  color_set.rs  generic_mana.rs  lib.rs  mana.rs  manas.rs  single_mana.rs  split_mana.rs  svg_config.rs  symbols.rs
symbols/: README.md
tests/: mana.rs
