[package]
name = "mana-symbols"
description = "Magic the Gathering mana symbols"
authors = ["Pazzaz <pazzaz.sundqvist@gmail.com>"]
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/Pazzaz/mana-symbols"
keywords = ["mtg", "visualization", "svg", "parse"]

[dev-dependencies]
insta = "1.44.3"

[dependencies]
base64 = "0.22.1"
nom = "8.0.0"
svg = "0.18.0"
